Configure for Netlify deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,7 @@
 [build]
   command = "npm run build"
   publish = ".next"
-  
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_VERSION = "10.2.4"
+  functions = "netlify/functions"
 
 [[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  force = false 
+  package = "@netlify/plugin-nextjs" 
