--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-    "netlify-build": "next build"
+    "netlify": "netlify dev"
   },
   "keywords": [
     "plants",
@@ -21,7 +21,10 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^2.4.0",
+    "@supabase/supabase-js": "^2.49.1",
     "canvas": "^3.1.0",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,10 +32,11 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.10.1",
+    "@netlify/plugin-nextjs": "^4.41.3",
     "autoprefixer": "^10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "netlify-cli": "^17.17.0",
     "postcss": "^8.4.32"
   }
 }
