Fix registration issue by correcting API URL and adding detailed logging

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,13 @@
   publish = ".next"
   functions = "netlify/functions"
 
+[dev]
+  targetPort = 3000
+  port = 8888
+  framework = "next"
+  publish = ".next"
+  functions = "netlify/functions"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
