Add production Supabase setup with database initialization script

--- a/.env.production
+++ b/.env.production
@@ -1,17 +1,18 @@
 # Production Environment
 # Supabase Connection
-# NOTE: Replace these with your production Supabase credentials
+# Replace these with your production Supabase credentials from Project Settings > API
 NEXT_PUBLIC_SUPABASE_URL=https://your-production-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-production-anon-key
 
 # For serverless functions (admin access)
-# NOTE: Replace these with your production Supabase credentials
+# Replace these with your production Supabase credentials
+# Use the "service_role" key for SUPABASE_KEY (not the anon key!)
 SUPABASE_URL=https://your-production-project.supabase.co
 SUPABASE_KEY=your-production-service-role-key
 
 # JWT Secret for authentication (production environment)
-# NOTE: Use a strong, unique secret in production
-JWT_SECRET=plantmarketplace_jwt_secret_key_2024_prod_environment_replace_with_secure_random_string
+# Generate a strong random string for production
+JWT_SECRET=plantmarketplace_jwt_secret_key_production_environment_secure_random_string
 
 # API URL for client-side requests
 NEXT_PUBLIC_API_URL=/api
