--- a/netlify.toml
+++ b/netlify.toml
@@ -13,8 +13,23 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-# Environment-specific settings
+# Base environment settings (development)
 [build.environment]
+  NODE_ENV = "development"
+  NEXT_PUBLIC_ENV = "development"
+
+# Production environment settings (main branch)
+[context.production.environment]
+  NODE_ENV = "production"
+  NEXT_PUBLIC_ENV = "production"
+
+# Branch deployments (dev branch)
+[context.dev.environment]
+  NODE_ENV = "development"
+  NEXT_PUBLIC_ENV = "development"
+
+# Deploy preview settings (PRs)
+[context.deploy-preview.environment]
   NODE_ENV = "development"
   NEXT_PUBLIC_ENV = "development"
 
