--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "next": "12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native-web": "^0.19.10",
-    "tailwindcss": "^3.4.1"
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
-    "netlify-cli": "^17.17.0",
-    "postcss": "^8.4.32"
+    "netlify-cli": "^17.38.1",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.3"
   }
 }
